# OOP_lr4

./: CMakeLists.txt
include/: array.h  figure.h  hexagon.h  pentagon.h  point.h  rhombus.h
src/: main.cpp
tests/: tests.cpp
